[package]
name = "async-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
serde_yaml = "0.8.23"
toml = "0.5.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3.21"
